Readme: Mention Eclipse 4.7.1a, no need for separate JDK 9 support